Update project information